# wasm-hands-on

./: .gitignore  CLAUDE.md  README.md  devbox.json
axum-crm/customer-service/: Cargo.toml  Dockerfile
axum-crm/customer-service/src/: main.rs
axum-crm/gateway/: Cargo.toml  Dockerfile
axum-crm/gateway/src/: main.rs
axum-crm/order-service/: Cargo.toml  Dockerfile
axum-crm/order-service/src/: main.rs
k8s/: postgres.yaml
k8s/containers/: customer-service.yaml  gateway.yaml  order-service.yaml
k8s/wasm/: customer-service.yaml  gateway.yaml  order-service.yaml
scripts/: bench-all.sh  cleanup.sh  setup-all.sh  smoke.sh
spin-crm/customer-service/: Cargo.toml  spin.toml
spin-crm/customer-service/src/: lib.rs
spin-crm/gateway/: Cargo.toml  spin.toml
spin-crm/gateway/src/: lib.rs
spin-crm/order-service/: Cargo.toml  spin.toml
spin-crm/order-service/src/: lib.rs
spinkube/: executor.yaml  setup.sh
tests/: availability-test.sh  coldstart-test.sh  cpu-bound-test.js  error-test.js  load-test.js  ping-db-test.js  resource-test.sh  scale-test.js
